# gaussian-free-fields-reu

./: .gitignore  README.md  cmake-compile-job.sh  dfgf-compiler.sh  gcc-compile-job.sh  gcc-compile.sh  gcc-compile_s1.sh  gcc-compile_t2.sh  gcc_compile.sh  gcc_compile_run_driver_s1_trial_data.sh  run_hpc_build.sh  run_hpc_build_s1.sh  run_hpc_build_t2.sh  run_hpc_driver_s1_trial_data.sh  setup-vcpkg.sh  test-compilation-gcc-9.2.0.out
jupyter_sims/: DataVisS1.ipynb  DataVisS1JSON.ipynb  Expected Maxima.ipynb  HeatMapCSVS1.ipynb  HeatMapCircle.ipynb  HeatMapSphere.ipynb  HeatMapTorus.ipynb  InitialLCF.ipynb  MaxDistCSVS1.ipynb  Maxima Distribution.ipynb  Maxima Graph.ipynb  MaximaGraphCSV.ipynb  MaximaGraphMultiCSVS1.ipynb  PlayingWJson.ipynb  RandVec_test.ipynb  Regression Sim.ipynb  Regression Simulation.ipynb  SimulationHeatMap.ipynb  SimulationHeatMapS1-Alexander (1).ipynb  SimulationHeatMapS1-Alexander.ipynb  SimulationHeatMapS1Json (1).ipynb  SimulationHeatMapT2-Alexander.ipynb  SimulationHeatMapT2.ipynb  Test Data.csv  ValidationStuff.ipynb  brownian_bridges.ipynb  brownian_simulate.ipynb  dfgf_s1.ipynb  gff_compare.ipynb  gff_on_s1_edit.ipynb  mt1test.csv  testing_scratchwork_DFGF_S1.ipynb  validation-tests.ipynb
jupyter_sims/.ipynb_checkpoints/: dfgf_s1-checkpoint.ipynb
jupyter_sims/CompleteDataVisS1/: 1000_0.500000.csv  500-900_s0.0-0.5.csv  500_s0.0-0.5.csv  DataVisFunctionalCSV_S1.ipynb  DataVisFunctional_S1.ipynb  DataVisS1Functional.ipynb  DataVisS1Script.ipynb  DataVisScript_S1.ipynb  FullDataS1.ipynb  FullData_S1.ipynb  MaximaGraphCSV.ipynb  MaximaGraphJson.ipynb  SByNGraphCSV.ipynb  SByNGraphJson.ipynb  stemplate.json  template.json  test1.json
jupyter_sims/DataAnalysis/: HeatMapsCSV_S1.ipynb  HeatMapsCSV_S2.ipynb  HeatMapsCSV_T2.ipynb  MaximaDistributionCSV.ipynb  MaximaGraphCSV.ipynb  SByNGraphCSV.ipynb  Script.ipynb  UserInterface.ipynb
output/: 629.10.2000.5.1000.csv  Formatting  exp_sample.csv  s025_n10-100.json  template.json
shell_scripts/: gcc_compile_s1.sh  run_hpc_driver_s1_maxima.sh
simulations/: .sample_max.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  CTestTestfile.cmake  Makefile  brownian_bridges.ipynb  cmake_install.cmake  dfgf_s1.ipynb  exp_sample.csv  expectedMaxData.csv  gff_compare.ipynb  gff_on_s1.ipynb  gff_on_s1_edit.ipynb  gff_slider.ipynb  makefile  output  sample_max.cpp  stochastic_calc_sims.ipynb  timeData.csv
simulations/.ipynb_checkpoints/: dfgf_s1-checkpoint.ipynb  gff_on_s1-checkpoint.ipynb
simulations/headers/: DFGF.hpp  DFGF_S1.hpp  DFGF_T2.hpp  RandArr.hpp  RandVec.hpp  tools.hpp
simulations/src/: DFGF_S1.cpp  DFGF_S2.py  DFGF_T2.cpp  Laplace_S2.py  RandArr.cpp  RandVec.cpp  Test.FGF_Lib.cpp  driver.cpp  driver2.cpp  driver_S1.cpp  driver_T2.cpp  driver_s1_maxima.cpp  driver_s1_maxima_vector.cpp  driver_s1_trial_data.cpp  driver_theoretical_checks.cpp  randvecs.h  read.me  sample_max.cpp  sample_max_class.h  tools.cpp  unit_tests.cpp  write_random.cpp
simulations/test-suite/: RandVec_test.cpp
simulations/test_suite/: CMakeLists.txt  CTestTestfile.cmake  DFGF_S1_test.cpp  DFGF_T2_test.cpp  Makefile  RandVec_test.cpp  cmake_install.cmake  gaussVect.csv
